# glfw-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shaders.cpp
assets/shaders/: simple_fragment_shader.fragmentshader  simple_vertex_shader.vertexshader  sprite.frag
include/: ball_object.h  controls.h  game.h  game_object.h  level.h  model.h  resource_manager.h  shader.h  shaders.h  sprite_renderer.h  texture2d.h
src/: ball_object.cpp  controls.cpp  debug.h  game.cpp  game_object.cpp  level.cpp  main.cpp  model.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture2d.cpp
